--- a/app/assets/styles/reset.css
+++ b/app/assets/styles/reset.css
@@ -13,20 +13,27 @@
 
   html,
   body {
-    min-height: 100vh;
     scrollbar-color: var(--primary-color) var(--light-color);
   }
 
   body {
     font-family: var(--main-font);
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
     color: var(--dark-color);
     /*background-color: var(--secondary-color);*/
     padding: 0;
     margin: 0;
     overflow-x: hidden;
+    min-height: 100vh;
+  }
+
+  /* 
+  * Specific to Nuxt having everything in a big div 
+  * */
+  #__nuxt {
+    min-height: 100vh;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
   }
 
   a {
