--- a/app/assets/styles/utilities.css
+++ b/app/assets/styles/utilities.css
@@ -14,6 +14,10 @@
     font-size: 0.6em;
   }
 
+  .text-center {
+    text-align: center;
+  }
+
   .mt-1 {
     margin-top: 0.4rem;
   }
